# kami-princing

./: .gitignore  Dockerfile  docker-compose.yml  notebook.ipynb  pyproject.toml  service.py  todo.md
kami_pricing/: constant.py  messages.py  pricing.py  pricing_manager.py  scraper.py
kami_pricing/api/: anymarket.py  plugg_to.py  tiny.py
kami_princing/: .~C Document.docx  .~df_pricing_anymarket.xlsx  anymarket.py  constant.py  notebook.ipynb  plugg_to_api.py  princing.py  scrap.py  scraper.py  tiny_api.py  url_from_gsheet.py
messages/: contacts.json
messages/templates/: default_message.md  pricing_message.md
settings/: pricing_manager.json
tests/: test_pricing_manager.py  test_princing.py  test_tiny_api.py
tests/apis/: test_anymarket.py  test_plugg_to.py  test_tiny.py
