[tool.poetry]
name = "kami-pricing"
version = "0.2.0"
description = "Pricing tool to acquire the best positioning without losing profit margin in different marketplaces, using the ANYMARKET API"
authors = ["Maicon de Menezes <maicondmenezes@gmail.com>", "Gustavo Lima <gustavasd@gmail.com>", "Marcos Madeira <mmadeirasilva5@gmail.com>"]
readme = "README.md"
packages = [{include = "kami_princing"}]

[tool.poetry.scripts]
kami_pricing = "service:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.0"
kami-logging = "^0.2.1"
kami-messenger = "^0.2.0"
kami-gdrive = "^0.1.3"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.2"
kami-filemanager = "^0.1.0"
kami-uno-database = "^0.1.4"
schedule = "^1.2.0"
kami-gsuite = "^0.1.0"
httpx = "^0.25.0"
pandas = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"
ipython = "^8.14.0"
ipykernel = "^6.23.1"
notebook = "^6.5.4"
nbformat = "^5.9.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.15"
mkdocstrings = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint-review = "blue --check --diff . && isort --check --diff ."
lint-fix = "blue . && isort ."
pre_test = "task lint-fix"
test = "pytest -s -x --cov=kami_pricing -vv -rs"
post_test = "coverage html"
docs = "mkdocs serve"
